# computeza

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  audit.key  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: build-xtable-fat-jar.yml  ci.yml
crates/computeza/: Cargo.toml
crates/computeza-audit/: Cargo.toml
crates/computeza-audit/src/: event.rs  key.rs  lib.rs  log.rs  verify.rs
crates/computeza-channel-partner/: Cargo.toml  build.rs
crates/computeza-channel-partner/proto/: channel_partner.proto
crates/computeza-channel-partner/src/: lib.rs  pq.rs  proto.rs  service.rs  tls.rs
crates/computeza-compliance/: Cargo.toml
crates/computeza-compliance/src/: eu_ai_act.rs  lib.rs  model_card.rs  transparency.rs
crates/computeza-core/: Cargo.toml
crates/computeza-core/src/: driver.rs  error.rs  health.rs  lib.rs  reconciler.rs  resource.rs
crates/computeza-driver/: Cargo.toml
crates/computeza-driver-native/: Cargo.toml
crates/computeza-driver-native/src/: detect.rs  fetch.rs  lib.rs  os_detect.rs  prerequisites.rs  progress.rs
crates/computeza-driver-native/src/linux/: databend.rs  garage.rs  grafana.rs  greptime.rs  kanidm.rs  lakekeeper.rs  mod.rs  openfga.rs  path.rs  postgres.rs  qdrant.rs  release.rs  restate.rs  sail.rs  service.rs  systemctl.rs  trino.rs  xtable.rs
crates/computeza-driver-native/src/macos/: kanidm.rs  launchctl.rs  mod.rs  path.rs  postgres.rs  service.rs
crates/computeza-driver-native/src/windows/: kanidm.rs  mod.rs  path.rs  postgres.rs  sc.rs
crates/computeza-driver/src/: lib.rs
crates/computeza-i18n/: Cargo.toml
crates/computeza-i18n/locales/en/: main.ftl  ui.ftl
crates/computeza-i18n/src/: lib.rs
crates/computeza-identity-federation/: Cargo.toml
crates/computeza-identity-federation/src/: claims.rs  config.rs  error.rs  lib.rs  provider.rs  providers.rs
crates/computeza-license/: Cargo.toml
crates/computeza-license/src/: lib.rs
crates/computeza-pipelines/: Cargo.toml
crates/computeza-pipelines/src/: lib.rs
crates/computeza-reconciler-databend/: Cargo.toml
crates/computeza-reconciler-databend/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-garage/: Cargo.toml
crates/computeza-reconciler-garage/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-grafana/: Cargo.toml
crates/computeza-reconciler-grafana/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-greptime/: Cargo.toml
crates/computeza-reconciler-greptime/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-kanidm/: Cargo.toml
crates/computeza-reconciler-kanidm/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-lakekeeper/: Cargo.toml
crates/computeza-reconciler-lakekeeper/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-openfga/: Cargo.toml
crates/computeza-reconciler-openfga/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-postgres/: Cargo.toml
crates/computeza-reconciler-postgres/src/: lib.rs  plan.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-postgres/tests/: integration_real_postgres.rs
crates/computeza-reconciler-qdrant/: Cargo.toml
crates/computeza-reconciler-qdrant/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-restate/: Cargo.toml
crates/computeza-reconciler-restate/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-sail/: Cargo.toml
crates/computeza-reconciler-sail/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-trino/: Cargo.toml
crates/computeza-reconciler-trino/src/: lib.rs  reconciler.rs  resource.rs
crates/computeza-reconciler-xtable/: Cargo.toml
crates/computeza-reconciler-xtable/src/: lib.rs
crates/computeza-secrets/: Cargo.toml
crates/computeza-secrets/src/: error.rs  kek.rs  lib.rs  store.rs
crates/computeza-state/: Cargo.toml
crates/computeza-state/src/: error.rs  lib.rs  sqlite.rs  store.rs
crates/computeza-tenancy/: Cargo.toml
crates/computeza-tenancy/src/: lib.rs
crates/computeza-ui-components/: Cargo.toml
crates/computeza-ui-components/src/: lib.rs
crates/computeza-ui-pages/: Cargo.toml
crates/computeza-ui-pages/src/: lib.rs
crates/computeza-ui-pipelines/: Cargo.toml
crates/computeza-ui-pipelines/src/: lib.rs
crates/computeza-ui-server/: Cargo.toml
crates/computeza-ui-server/assets/: computeza.css  input.tailwind.css
crates/computeza-ui-server/assets/brand/lottie/: computeza-pulse.json
crates/computeza-ui-server/src/: auth.rs  lib.rs
crates/computeza-ui-server/tests/: smoke.rs  with_store.rs
crates/computeza-ui-themes/: Cargo.toml
crates/computeza-ui-themes/src/: lib.rs
crates/computeza/src/: main.rs
docs/: README.md  architecture.md  audit.md  contributing.md  i18n.md  licensing.md  sbom.md  studio-pyiceberg.md  v0.1-bootstrap-and-sso-design.md  v0.1-managed-components-versions.md
docs/plans/: sso-pattern-a.md
scripts/: audit-fix-nonascii.py  audit-nonascii.py  check.sh
