[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "LicenseRef-Proprietary"
repository = "https://github.com/indritkalaj/computeza"
authors = ["Indrit Kalaj <kalaj.indrit@gmail.com>"]
homepage = "https://github.com/indritkalaj/computeza"
description = "Computeza — all-Rust open lakehouse control plane"

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# --- Errors ---
anyhow = "1"
thiserror = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yml is the maintained successor to the now-deprecated `serde_yaml`
# crate. The 0.0.x versioning is the maintainer's convention, not an
# instability signal — it's widely used in production as of April 2026.
serde_yml = "0.0.12"

# --- Tracing / logs ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- CLI (binary only) ---
clap = { version = "4", features = ["derive"] }

# --- HTTP server (axum + tower) ---
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# --- UI framework (Leptos SSR) ---
# Spec §4.1 mandates Leptos 0.7+. We use the latest 0.8 line.
# `ssr` feature for server-side rendering; client hydration deferred.
leptos = { version = "0.8", features = ["ssr"] }

# --- i18n (Fluent / .ftl bundles) ---
fluent-templates = "0.14"
unic-langid = { version = "0.9", features = ["macros"] }

# --- Crypto (audit signing, license verification, integrity) ---
# ed25519-dalek 3.0 is in pre-release as of April 2026; we stay on the
# 2.x stable line. sqlx 0.9 is similarly in alpha.
ed25519-dalek = "2"
blake3 = "1"
sha2 = "0.11"

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- IDs ---
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# --- Secrets (never leak via Debug/Display) ---
secrecy = { version = "0.10", features = ["serde"] }

# --- SQL drivers ---
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }

# --- Internal crates ---
# Tier 1 — Core Engine
computeza-core      = { path = "crates/computeza-core",      version = "0.0.1" }
computeza-state     = { path = "crates/computeza-state",     version = "0.0.1" }
computeza-audit     = { path = "crates/computeza-audit",     version = "0.0.1" }
computeza-secrets   = { path = "crates/computeza-secrets",   version = "0.0.1" }
computeza-driver    = { path = "crates/computeza-driver",    version = "0.0.1" }
computeza-tenancy   = { path = "crates/computeza-tenancy",   version = "0.0.1" }
computeza-pipelines = { path = "crates/computeza-pipelines", version = "0.0.1" }

# Tier 2 — Drivers
computeza-driver-native = { path = "crates/computeza-driver-native", version = "0.0.1" }

# Tier 4 — Web Console (i18n is shared, so placed at workspace level)
computeza-i18n          = { path = "crates/computeza-i18n",          version = "0.0.1" }
computeza-ui-server     = { path = "crates/computeza-ui-server",     version = "0.0.1" }
computeza-ui-components = { path = "crates/computeza-ui-components", version = "0.0.1" }
computeza-ui-pages      = { path = "crates/computeza-ui-pages",      version = "0.0.1" }
computeza-ui-pipelines  = { path = "crates/computeza-ui-pipelines",  version = "0.0.1" }
computeza-ui-themes     = { path = "crates/computeza-ui-themes",     version = "0.0.1" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = "line-tables-only"
