[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
license = "LicenseRef-Proprietary"
repository = "https://github.com/indritkalaj/computeza"
authors = ["Indrit Kalaj <kalaj.indrit@gmail.com>"]
homepage = "https://github.com/indritkalaj/computeza"
description = "Computeza -- all-Rust open lakehouse control plane"

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# --- Errors ---
anyhow = "1"
thiserror = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML support intentionally not in the workspace deps right now:
# - `serde_yaml` 0.9.34 was deprecated by its maintainer in late 2024.
# - `serde_yml` 0.0.12 (the community fork) was flagged
#   unsound/unmaintained in RUSTSEC-2025-0067 / RUSTSEC-2025-0068.
# Pipelines (the only consumer) is still a stub. When real YAML loading
# lands we'll evaluate `serde-norway` / `serde-yaml-bw` / `marked-yaml`
# against current security advisories.

# --- Tracing / logs ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- CLI (binary only) ---
clap = { version = "4", features = ["derive"] }

# --- HTTP server (axum + tower) ---
axum = { version = "0.8" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# --- HTTP client (for reconcilers that talk to managed components over REST) ---
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }

# --- Archive extraction (driver-native uses these to unpack downloaded binary bundles) ---
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
# liblzma `static` feature compiles liblzma into the binary so virgin
# Linux hosts don't need xz-utils to extract restate's .tar.xz bundles.
liblzma = { version = "0.4", features = ["static"] }
futures-util = "0.3"

# --- UI framework (Leptos SSR) ---
# Spec section 4.1 mandates Leptos 0.7+. We use the latest 0.8 line.
# `ssr` feature for server-side rendering; client hydration deferred.
leptos = { version = "0.8", features = ["ssr"] }

# --- i18n (Fluent / .ftl bundles) ---
fluent-templates = "0.14"
unic-langid = { version = "0.9", features = ["macros"] }

# --- Crypto (audit signing, license verification, integrity) ---
# ed25519-dalek 3.0 is in pre-release as of April 2026; we stay on the
# 2.x stable line. sqlx 0.9 is similarly in alpha.
ed25519-dalek = "2"
blake3 = "1"
sha2 = "0.11"
# Pure-Rust X.509 + key generation. driver-native uses this for the
# kanidm self-signed TLS cert so we don't shell out to `openssl req`
# (and don't make openssl a host prereq).
rcgen = "0.14"

# --- Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- IDs ---
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# --- Secrets (never leak via Debug/Display) ---
secrecy = { version = "0.10", features = ["serde"] }
# aes-gcm 0.11 and argon2 0.6 are RC-only as of April 2026; stay on 0.10 / 0.5.
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }

# --- SQL drivers ---
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
] }

# --- Internal crates ---
#
# Single source of truth for the crate version is `[workspace.package].version`
# (line 6 above). Each crate inherits via `version.workspace = true` in its own
# Cargo.toml's [package] section, and the binary reads it via
# `env!("CARGO_PKG_VERSION")` for UI rendering. Path-dep entries below
# intentionally OMIT the `version = "..."` field so editing the workspace
# version doesn't require touching every dependency declaration -- bumping
# line 6 is sufficient. (Version backstops are only required for publish-time
# resolution; v0.0.x doesn't publish internal crates to crates.io.)
#
# Tier 1 -- Core Engine
computeza-core      = { path = "crates/computeza-core" }
computeza-state     = { path = "crates/computeza-state" }
computeza-audit     = { path = "crates/computeza-audit" }
computeza-secrets   = { path = "crates/computeza-secrets" }
computeza-driver    = { path = "crates/computeza-driver" }
computeza-tenancy   = { path = "crates/computeza-tenancy" }
computeza-pipelines = { path = "crates/computeza-pipelines" }
computeza-identity-federation = { path = "crates/computeza-identity-federation" }
computeza-license = { path = "crates/computeza-license" }
computeza-channel-partner = { path = "crates/computeza-channel-partner" }
computeza-compliance = { path = "crates/computeza-compliance" }

# Tier 2 -- Drivers
computeza-driver-native = { path = "crates/computeza-driver-native" }

# Tier 3 -- Reconcilers (all wired into the binary's observe loop;
# observe() best-effort runs every 30s for each registered resource).
computeza-reconciler-postgres   = { path = "crates/computeza-reconciler-postgres" }
computeza-reconciler-kanidm     = { path = "crates/computeza-reconciler-kanidm" }
computeza-reconciler-garage     = { path = "crates/computeza-reconciler-garage" }
computeza-reconciler-lakekeeper = { path = "crates/computeza-reconciler-lakekeeper" }
computeza-reconciler-databend   = { path = "crates/computeza-reconciler-databend" }
computeza-reconciler-sail       = { path = "crates/computeza-reconciler-sail" }
computeza-reconciler-trino      = { path = "crates/computeza-reconciler-trino" }
computeza-reconciler-qdrant     = { path = "crates/computeza-reconciler-qdrant" }
computeza-reconciler-restate    = { path = "crates/computeza-reconciler-restate" }
computeza-reconciler-greptime   = { path = "crates/computeza-reconciler-greptime" }
computeza-reconciler-grafana    = { path = "crates/computeza-reconciler-grafana" }
computeza-reconciler-openfga    = { path = "crates/computeza-reconciler-openfga" }

# Tier 4 -- Web Console (i18n is shared, so placed at workspace level)
computeza-i18n          = { path = "crates/computeza-i18n" }
computeza-ui-server     = { path = "crates/computeza-ui-server" }
computeza-ui-components = { path = "crates/computeza-ui-components" }
computeza-ui-pages      = { path = "crates/computeza-ui-pages" }
computeza-ui-pipelines  = { path = "crates/computeza-ui-pipelines" }
computeza-ui-themes     = { path = "crates/computeza-ui-themes",     version = "0.0.1" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = "line-tables-only"
