[package]
name = "computeza-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza audit — append-only signed audit log with Ed25519 attestation"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
