[package]
name = "computeza-driver-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza native driver -- installs and manages components as native OS services (systemd / launchd / Windows Services)"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
computeza-driver = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
