[package]
name = "computeza-driver-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza native driver -- installs and manages components as native OS services (systemd / launchd / Windows Services)"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
computeza-driver = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
chrono = { workspace = true }

# Used on every target so the crate still compiles for tests / type-check
# even where the download path is not wired in. The non-Windows installers
# may grow similar auto-fetch logic in follow-ups.
reqwest = { workspace = true }
futures-util = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
liblzma = { workspace = true }
# rcgen: self-signed X.509 generation for the kanidm TLS cert step.
# Replaces a shell-out to `openssl req` so a virgin Linux host doesn't
# need openssl on $PATH for the kanidm install path to work.
rcgen = { workspace = true }
