[package]
name = "computeza-identity-federation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza identity federation -- OIDC client + upstream IdP bindings (Entra ID, AWS IAM, GCP IAM, Keycloak, on-prem)"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true }
