[package]
name = "computeza-license"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza license envelope -- ed25519-signed entitlement tokens with reseller-chain claims"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
base64ct = { version = "1", features = ["alloc"] }
