[package]
name = "computeza-pipelines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza pipelines -- pipeline definition + compilation to Restate workflows"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
