[package]
name = "computeza-reconciler-garage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Garage reconciler — manages cluster layout, zones, replication, buckets, access keys, lifecycle"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
