[package]
name = "computeza-reconciler-grafana"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Grafana reconciler -- manages datasources, folders, dashboards-as-code, OIDC"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
