[package]
name = "computeza-reconciler-greptime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GreptimeDB reconciler -- manages storage backend, retention, OTLP collectors per managed component"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
