[package]
name = "computeza-reconciler-kanidm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Kanidm reconciler — manages realms, OIDC clients, users, groups, passkey policies, federation"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
