[package]
name = "computeza-reconciler-kanidm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Kanidm reconciler -- manages realms, OIDC clients, users, groups, passkey policies, federation"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
computeza-state = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
url = "2"

[dev-dependencies]
