[package]
name = "computeza-reconciler-lakekeeper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lakekeeper reconciler — manages projects, warehouses, OIDC, OpenFGA model, vended creds, Generic Tables"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
