[package]
name = "computeza-reconciler-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PostgreSQL reconciler — manages databases on a running PostgreSQL instance via SQLx"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
computeza-audit = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
secrecy = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
url = "2"
