[package]
name = "computeza-reconciler-qdrant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Qdrant reconciler — manages collections, JWT RBAC, snapshot policies, sharding"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
