[package]
name = "computeza-reconciler-trino"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Trino reconciler -- distributed SQL engine; Studio's primary SQL surface"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
computeza-state = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
