[package]
name = "computeza-reconciler-xtable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Apache XTable reconciler — manages Iceberg/Delta/Hudi format translation jobs (sidecar with bundled JRE)"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
