[package]
name = "computeza-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Computeza secrets — AES-256-GCM encrypted secret storage with age key wrapping"

[lints]
workspace = true

[dependencies]
computeza-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
